--- a/.gitignore
+++ b/.gitignore
@@ -206,7 +206,6 @@ export default class FeeCaseGetByCifUseCase {
       });
 
       // ### GARANTE QUE SEMPRE EXISTA OS 3 SUBGRUPOS ###
-      // Caso algum não tenha vindo, criamos vazio
       const requiredNames = ["Standard Fees", "Client Current Fees", "Exception Request"];
       requiredNames.forEach(requiredName => {
         const found = mergedGroupsArray.find(g => g.name === requiredName);
@@ -220,11 +219,20 @@ export default class FeeCaseGetByCifUseCase {
           });
         }
       });
-      // Re-ordena outra vez (pois adicionamos no final)
+
+      // Re-ordena caso tenha adicionado algum no final
       mergedGroupsArray.sort((a, b) => {
         const priorityA = nameOrder[a.name] ?? 9999;
         const priorityB = nameOrder[b.name] ?? 9999;
         return priorityA - priorityB;
+      });
+
+      // ### SE UM GRUPO FICAR COMPLETAMENTE VAZIO, ADICIONA UM FIELD PLACEHOLDER ###
+      mergedGroupsArray.forEach(g => {
+        if (g.fields.length === 0) {
+          // Adicionamos 1 field vazio com unifyFieldShape
+          g.fields.push(unifyFieldShape({}));
+        }
       });
 
       return {
@@ -259,25 +267,3 @@ export default class FeeCaseGetByCifUseCase {
     return Result.ok(result);
   }
 }
-
-
-
-
-
-  throw new Error('Application name must be provided')
-            ^
-
-Error: Application name must be provided
-    at #loadFromConfigServer (file:///H:/workspace/feeManagement/conductor-fee-management/src/core/config/index.js:79:13)
-    at Config.bootstrap (file:///H:/workspace/feeManagement/conductor-fee-management/src/core/config/index.js:29:41)
-    at App.bootstrap (file:///H:/workspace/feeManagement/conductor-fee-management/src/app/app.js:11:38)
-    at file:///H:/workspace/feeManagement/conductor-fee-management/src/app/api/index.js:5:13
-    at file:///H:/workspace/feeManagement/conductor-fee-management/src/app/api/index.js:7:3
-    at ModuleJob.run (node:internal/modules/esm/module_job:217:25)
-    at async ModuleLoader.import (node:internal/modules/esm/loader:316:24)
-    at async loadESM (node:internal/process/esm_loader:34:7)
-    at async handleMainPromise (node:internal/modules/run_main:66:12)
-
-Node.js v20.9.0
-[nodemon] app crashed - waiting for file changes before starting...
-
