--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,31 @@
+{
+  CustomerName: "QQQQ QQQQQQ                             ",
+  CustomerShortName: "QQQQQQ QQQQ         ",
+  CustomerAddress: "2417 Tongass Ave #111                    QQQ QQQQ QQ 99999                       ",
+  CIFNO: "F016583",
+  ACCTNO: 7115342,
+  FeeDescription: "FX Outgoing Wire Fee",
+  FeeCode: "JH006",
+  Istransactional: true,
+  FeeType: "Bank Account Fees",
+  FeeAmount: 25,
+  Frequency: null,
+  "Branch City": "New York",
+  "Branch State": "NY",
+  "Branch Type": "Domestic",
+  OfficerId: "369   ",
+  Officer: "Mordekhai Aghai           BR 7",
+  StandardException: "Standard",
+  "Default Fee Package Id": 2,
+  "Default Fee Package": "Domestic Individual",
+  "Default Package Type": "Individual",
+  "Default Fee Amount": 25,
+  "Default Frequency": null,
+}
+
+
+
+
 import { Fee } from '#src/models/entities/Fees.js'
 import Result from '#features/shared/result.js'
 import CustomerFees from '#src/models/CustomerFees.js'
